--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-
+    
   },
   "keywords": [],
   "author": "",
